--- a/Flexbox Challenge #4/index.html
+++ b/Flexbox Challenge #4/index.html
@@ -59,11 +59,12 @@
         <section class="col-alt-section">
             <div class="container d-flex">
                 <div class="col">
-                    <h2 class="section__heading light-heading">Made custom for you</h2>
+                    <h2 class="section__heading light-heading">Created with care</h2>
                     <p class="light-heading">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore
-                        magna aliqua. Ut enim ad minim veniam.
+                        Felis donec et odio pellentesque diam volutpat. Aliquam
+                        purus sit amet luctus venenatis. Turpis in eu mi
+                        bibendum neque egestas congue quisque egestas.
+                        Pellentesque sit amet porttitor eget dolor morbi non.
                     </p>
                 </div>
                 <div class="col">
