--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -58,15 +58,15 @@
   </section>
 
   <section class="section">
-    <div class="container">
+    <div class="container columns">
       <article class="col-1">
-        <h3 class="title">It doesn’t have to be so hard</h3>
+        <h3 class="title gold-text">It doesn’t have to be so hard</h3>
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
           labore et dolore magna
           aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
           tempor
           incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-        <img src="./img/banner-image.jpg" alt="">
+        <img class="image" src="./img/banner-image.jpg" alt="">
         <p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
           enim ad minim veniam. Lorem ipsum dolor sit amet, consectetur
@@ -79,7 +79,7 @@
           adipiscing elit, sed do eiusmod tempor incididunt ut labore et
           dolore magna aliqua. Ut enim ad minim veniam</p>
       </article>
-      <div class="col-2">
+      <aside class="col-2">
         <article class="card">
           <h4 class="card__title">Break it down</h4>
           <p class="card__para">Lorem ipsum dolor sit amet,
@@ -87,7 +87,21 @@
             eiusmod tempor incididunt ut
             labore et dolore magna aliqua.</p>
         </article>
-      </div>
+        <article class="card">
+          <h4 class="card__title">Work your way up</h4>
+          <p class="card__para">Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut
+            labore et dolore magna aliqua.</p>
+        </article>
+        <article class="card">
+          <h4 class="card__title">Break it down</h4>
+          <p class="card__para">Lorem ipsum dolor sit amet,
+            consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut
+            labore et dolore magna aliqua.</p>
+        </article>
+      </aside>
     </div>
   </section>
   <script src="./js/app.js"></script>
