--- a/Final Challenge/index.html
+++ b/Final Challenge/index.html
@@ -104,6 +104,48 @@
       </aside>
     </div>
   </section>
+
+  <footer class="footer">
+    <h6 class="title container">
+      just scratching the surface
+    </h6>
+    <div class="blocks container">
+      <article class="block">
+        <h6 class="title gold-text">About the company</h6>
+        <p class="para">
+          Lorem ipsum dolor sit amet, consectetur adipiscing
+          elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam.
+        </p>
+      </article>
+      <nav class="block">
+        <h6 class="title gold-text">Getting around</h6>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <nav class="block">
+        <h6 class="title gold-text">Other things</h6>
+        <ul>
+          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="#">dolar</a></li>
+          <li><a href="#">sit amet</a></li>
+          <li><a href="#">consector</a></li>
+        </ul>
+      </nav>
+      <nav class="block">
+        <h6 class="title gold-text">And more</h6>
+        <ul>
+          <li><a href="#">Lorem ipsum</a></li>
+          <li><a href="#">dolar</a></li>
+          <li><a href="#">sit amet</a></a></li>
+          <li><a href="#">consector</a></a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
   <script src="./js/app.js"></script>
 </body>
 
